started fixing spacing

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -105,7 +105,7 @@ select {
 
 @include breakpoint(for-desktop-up) {
   .padding-bot-20 {
-    padding-bottom: 4rem;
+    padding-bottom: 2.4375rem;;
   }
 }
 
@@ -134,6 +134,12 @@ select {
 }
 .margin-bot-30 {
   margin-bottom: 1.875rem;
+}
+@include breakpoint(for-desktop-up) {
+  .margin-bot-30 {
+    margin-bottom: 3.5rem;
+  }
+
 }
 .margin-bot-40 {
   margin-bottom: 2.5rem;
