--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,7 +1,7 @@
 header.header {
     display: flex;
     justify-content: space-between;
-    padding: 1.4375rem 0 1.125rem 0;
+    padding: 1.125rem 0 1.125rem 0;
     align-items: center;
 }
 
