--- a/src/scss/_icons-buttons.scss
+++ b/src/scss/_icons-buttons.scss
@@ -44,7 +44,7 @@ Single-colored icons can be modified like so:
 
 // buttons
 .btn-default {
-  padding: 0.5em 2em;  
+  padding: 1.25em 2em;  
   outline: none;
   border-radius: 55px;
   text-transform: uppercase;
